--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
+    "ng2-order-pipe": "^0.1.5",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
