--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
+    "mat-table-exporter": "^15.0.0",
     "ng2-order-pipe": "^0.1.5",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^6.0.3",
