--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,10 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/@syncfusion/ej2-material-theme/styles/material.css",
+  "src/styles.css"
+
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
