--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@syncfusion/ej2-angular-schedule": "^22.1.35",
+    "@syncfusion/ej2-material-theme": "^22.1.34",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "mat-table-exporter": "^15.0.0",
