--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "ng2-order-pipe": "^0.1.5",
