--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Technical-Services-System-Front",
-  "version": "0.0.0",
+  "version": "15.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -14,16 +14,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
-    "@angular/cdk": "^15.2.5",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.5",
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.1",
+    "angular-bootstrap-md": "^15.0.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
